# -Prd-docs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  README.zh-TW.md  VIDEO_SCRIPT.md  WRITEUP.md  opencode.json  package.json  pyproject.toml
.agents/skills/prd-analysis/: SKILL.md
.gemini/: settings.json
data/architecture/: architecture.md
data/prds/: prd-001-dark-mode.md  prd-002-wishlist-no-ac.md  prd-003-payment-with-key.md  prd-004-search-vague.md  prd-005-inventory-scoped.md
eval/: evalset.jsonl  judge.py  rubric.yaml
frontend/: DESIGN.md  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
scripts/: demo.sh  deploy.sh  generate_video.py  local_demo.py  submit.sh
src/: __init__.py  main.py  report.py
src/agents/: __init__.py  _model.py  _schema_fence_patch.py  architecture.py  breakdown.py  clarity.py  completeness.py  estimation.py  orchestrator.py  risk.py  synthesis.py
src/doc_mcp/: __init__.py  repository.py  server.py
src/models/: __init__.py  schemas.py
src/policy/: __init__.py  checker.py  policies.yaml
src/sessions/: __init__.py  registry.py
tests/: test_api.py  test_mcp_integration.py  test_mcp_server.py  test_model_config.py  test_models.py  test_orchestrator.py  test_pipeline_integration.py  test_policy.py  test_report.py  test_schema_fence_patch.py  test_sessions.py  test_synthesis.py
tests/test_agents/: test_architecture.py  test_structure.py
(+21 files in other folders)
